# wcl-tbc-analyzer

./: .env.example  .gitignore  CLAUDE.md  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.langfuse.yml  pyproject.toml  requirements.txt
.project/: spec.yaml
code/alembic/: env.py
code/alembic/versions/: 001_initial_schema.py  002_add_speed_rankings.py  003_add_performance_indexes.py  004_add_ability_and_buff_tables.py  005_add_death_details.py  006_add_cast_metrics.py  007_add_cooldown_usage.py  008_add_overheal_column.py  009_add_cancelled_casts.py  010_add_cast_events.py  010_add_fight_percentage.py  011_add_combatant_info.py  011_add_resource_snapshots.py  012_add_cooldown_windows.py  012_add_resource_and_cast_events.py  013_add_gear_enchant_gems.py  013_add_phase_metrics.py  014_add_cascades_and_checks.py  014_add_dot_refreshes.py  015_add_missing_indexes.py  015_add_rotation_scores.py  018_add_benchmark_fk_and_indexes.py  23aaa98ec819_add_benchmark_tables.py  2b19c872c9d2_backfill_healer_hps_from_dps_column.py
code/frontend/: index.html  package-lock.json  package.json
code/frontend/src/: App.tsx  index.css
code/shukketsu/: __init__.py  config.py  utils.py
code/shukketsu/agent/: graph.py  intent.py  llm.py  state.py  (+4 more)
code/tests/: test_benchmark_config.py  test_config.py  test_pull_my_logs.py  test_seed_encounters.py  test_utils.py
docs/: DIAGNOSTIC_REPORT.md
docs/plans/: 2026-02-16-comprehensive-improvements.md  2026-02-16-streaming-endpoint-design.md  2026-02-16-streaming-endpoint.md  2026-02-17-18-issue-fix-plan.md  2026-02-17-18-issue-implementation.md  2026-02-17-critical-bugfixes-round2.md  2026-02-17-personal-tool-features.md  2026-02-17-wowanalyzer-parity.md  2026-02-18-critical-bugfixes.md  2026-02-19-benchmark-pipeline-design.md  2026-02-19-benchmark-pipeline-impl.md  2026-02-19-domain-correctness-design.md  2026-02-19-domain-correctness-impl.md  2026-02-19-simplify-over-engineering.md  2026-02-19-tbc-accuracy-fixes.md  2026-02-20-codebase-cleanup.md  2026-02-20-crag-to-react-design.md  2026-02-20-crag-to-react.md  2026-02-27-auto-speed-rankings.md
models/: Modelfile
scripts/: weekly-rankings.sh
(+190 files in other folders)
