[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "shukketsu"
version = "0.1.0"
description = "WoW TBC raid performance analyzer with agentic AI"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "httpx>=0.28",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic-settings>=2.7",
    "langchain>=0.3",
    "langchain-core>=0.3",
    "langchain-openai>=0.3",
    "langgraph>=0.2",
    "tenacity>=9.0",
    "sse-starlette>=2.0",
]

[project.optional-dependencies]
langfuse = ["langfuse>=2.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "respx>=0.22",
    "ruff>=0.9",
    "testcontainers[postgres]>=4.0",
    "psycopg2-binary>=2.9",
]

[project.scripts]
pull-my-logs = "shukketsu.scripts.pull_my_logs:main"
pull-rankings = "shukketsu.scripts.pull_rankings:main"
register-character = "shukketsu.scripts.register_character:main"
seed-encounters = "shukketsu.scripts.seed_encounters:main"
pull-speed-rankings = "shukketsu.scripts.pull_speed_rankings:main"
snapshot-progression = "shukketsu.scripts.snapshot_progression:main"
pull-table-data = "shukketsu.scripts.pull_table_data:main"
pull-benchmarks = "shukketsu.scripts.pull_benchmarks:main"
manage-watched-guilds = "shukketsu.scripts.manage_watched_guilds:main"
export-training-data = "shukketsu.scripts.export_training_data:main"
generate-synthetic-data = "shukketsu.scripts.generate_synthetic_data:main"
prepare-training-data = "shukketsu.scripts.prepare_training_data:main"
eval-traces = "shukketsu.scripts.eval_traces:main"

[tool.setuptools.packages.find]
where = ["code"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["code/tests"]
asyncio_mode = "auto"
markers = ["integration: requires Docker PostgreSQL (testcontainers)"]

[tool.ruff]
src = ["code"]
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
ignore = ["B008"]  # Depends() in function defaults is idiomatic FastAPI
